# src/main/java/com/project1/ms_transaction_service/model/entity/CustomerType.java
@@ -1,0 +1,6 @@
+package com.project1.ms_transaction_service.model.entity;
+
+public enum CustomerType {
+    BUSINESS,
+    PERSONAL
+}
